Refactored code to stop using deprecated methods.